# sqlparser

./: .gitignore  CMakeLists.txt  CMakePresets.json  about_build.md  postgresql_type.csv  readme.md
examples/: CMakeLists.txt  add_exsiting_sql.cpp  ast_manipulation.cpp  check_complex_query.cpp  check_union.cpp  pg_cast.cpp  print_ast.cpp  repro_issue.cpp  simple_select.cpp  sql_check.cpp  test_custom_function.cpp  test_double_precision.cpp  test_postgresql_types.cpp  union_manipulation.cpp  union_query.cpp
include/sqlparser/: ast.hpp  config.hpp  generator.hpp  parser.hpp
tests/: CMakeLists.txt  test_main.cpp
